Imperativa2/src/plp/imperative2/parser/Imp2Parser.java
/* Generated By:JavaCC: Do not edit this line. Imp2Parser.java */
package plp.imperative2.parser;

import plp.expressions1.util.*;
import plp.expressions2.expression.*;
import plp.imperative1.command.*;
import plp.imperative1.declaration.*;
import plp.imperative1.memory.*;
import plp.imperative2.*;
import plp.imperative2.command.*;
import plp.imperative2.declaration.*;
import plp.imperative2.memory.*;
import java.util.*;

public class Imp2Parser implements Imp2ParserConstants {

    public static void main(String args[]) {
            Imp2Parser parser;
            ListaValor entrada = new ListaValor();
            if (args.length == 0) {
                System.out.println("Imperativa 2 PLP Parser Version 0.0.1:  Reading from standard input . . .");
                parser = new Imp2Parser(System.in);
            } else{
                System.out.println("Imperativa 2 PLP Parser Version 0.0.1:  Reading from file " + args[0] + " . . .");
                try {
                        parser = new Imp2Parser(new java.io.FileInputStream(args[0]));
                } catch (java.io.FileNotFoundException e) {
                        System.out.println("Java Parser Version 1.0.2:  File " + args[0] + " not found.");
                        return;
                }

                List valores = new LinkedList();
                for(int i=1;i<args.length;i++)
                {
                        String parametro = args[i];

                        try {
                                Integer inteiro = Integer.valueOf(parametro);
                                valores.add(new ValorInteiro(inteiro.intValue()));
                                continue;
                        } catch(NumberFormatException e) {

                        }

                        if(parametro.equalsIgnoreCase("true")
                            || parametro.equalsIgnoreCase("false")) {
                                Boolean booleano = Boolean.valueOf(parametro);
                                valores.add(new ValorBooleano(booleano.booleanValue()));
                        } else {
                            valores.add(new ValorString(parametro));
                        }
                }
                  entrada = criaListaValor(valores);
            }

            try {
            Programa programa = parser.Input();
            System.out.println("Imperativa 2 PLP Parser Version 0.0.1:  Imperativa2 program parsed successfully.");

            if(programa.checaTipo(new ContextoCompilacaoImperativa(entrada))) {
                ListaValor saida = programa.executar(new ContextoExecucaoImperativa2(entrada));
                System.out.println(saida);
            }
            else {
                System.out.println("Erro de tipo");
            }
        } catch (Exception e) {
            System.out.println("Imperativa 2 PLP Parser Version 0.0.1:  Encountered errors during parse.");
            e.printStackTrace();
        }
        }

        public static ListaValor criaListaValor(List valores) {
                if(valores.size() == 0) {
                        return new ListaValor();
                }

                Valor primeiro = (Valor) valores.get(0);
                valores.remove(0);
                return new ListaValor(primeiro, criaListaValor(valores));
    }

  static final public Programa Input() throws ParseException {
    trace_call("Input");
    try {
    Programa retorno;
      retorno = PPrograma();
      jj_consume_token(0);
        {if (true) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Input");
    }
  }

  static final public Programa PPrograma() throws ParseException {
    trace_call("PPrograma");
    try {
        Comando retorno;
      retorno = PComando();
                {if (true) return new Programa(retorno);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PPrograma");
    }
  }

  static final public Comando PComando() throws ParseException {
    trace_call("PComando");
    try {
        Comando retorno;
      if (jj_2_1(2147483647)) {
        retorno = PSequenciaComando();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMAND_SKIP:
        case WHILE:
        case READ:
        case WRITE:
        case IF:
        case CALL:
        case IDENTIFIER:
        case LPAREN:
        case LBRACE:
          retorno = PComandoSimples();
          break;
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
        {if (true) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PComando");
    }
  }

  static final public SequenciaComando PSequenciaComando() throws ParseException {
    trace_call("PSequenciaComando");
    try {
        Comando c1;
        Comando c2;
      c1 = PComandoSimples();
      jj_consume_token(SEMICOLON);
      c2 = PComando();
         {if (true) return new SequenciaComando(c1, c2);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PSequenciaComando");
    }
  }

  static final public IO PIO() throws ParseException {
    trace_call("PIO");
    try {
        IO retorno;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case READ:
        retorno = PRead();
        break;
      case WRITE:
        retorno = PWrite();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
         {if (true) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PIO");
    }
  }

  static final public Read PRead() throws ParseException {
    trace_call("PRead");
    try {
        Id id;
      jj_consume_token(READ);
      jj_consume_token(LPAREN);
      id = PId();
      jj_consume_token(RPAREN);
         {if (true) return new Read (id);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PRead");
    }
  }

  static final public Write PWrite() throws ParseException {
    trace_call("PWrite");
    try {
        Expressao exp;
      jj_consume_token(WRITE);
      jj_consume_token(LPAREN);
      exp = PExpressao();
      jj_consume_token(RPAREN);
         {if (true) return new Write(exp);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PWrite");
    }
  }

  static final public IfThenElse PIfThenElse() throws ParseException {
    trace_call("PIfThenElse");
    try {
        Expressao expressao;
        Comando comandoThen;
        Comando comandoElse;
      jj_consume_token(IF);
      expressao = PExpressao();
      jj_consume_token(THEN);
      comandoThen = PComando();
      jj_consume_token(ELSE);
      comandoElse = PComando();
         {if (true) return new IfThenElse (expressao, comandoThen, comandoElse);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PIfThenElse");
    }
  }

  static final public While PWhile() throws ParseException {
    trace_call("PWhile");
    try {
        Expressao expressao;
        Comando comando;
      jj_consume_token(WHILE);
      expressao = PExpressao();
      jj_consume_token(DO);
      comando = PComando();
         {if (true) return new While(expressao, comando);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PWhile");
    }
  }

  static final public Skip PSkip() throws ParseException {
    trace_call("PSkip");
    try {
      jj_consume_token(COMAND_SKIP);
         {if (true) return new Skip();}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PSkip");
    }
  }

  static final public Atribuicao PAtribuicao() throws ParseException {
    trace_call("PAtribuicao");
    try {
        Id id;
        Expressao exp;
      id = PId();
      jj_consume_token(ATTRIB);
      exp = PExpressao();
                {if (true) return new Atribuicao(id, exp);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PAtribuicao");
    }
  }

  static final public Id PId() throws ParseException {
    trace_call("PId");
    try {
        Token token;
      token = jj_consume_token(IDENTIFIER);
                {if (true) return new Id(token.toString());}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PId");
    }
  }

  static final public Valor PValorInteiro() throws ParseException {
    trace_call("PValorInteiro");
    try {
        Token token;
      token = jj_consume_token(INTEGER_LITERAL);
                {if (true) return new ValorInteiro(Integer.parseInt(token.toString()));}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PValorInteiro");
    }
  }

  static final public Valor PValorBooleano() throws ParseException {
    trace_call("PValorBooleano");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FALSE:
        jj_consume_token(FALSE);
                    {if (true) return new ValorBooleano(false);}
        break;
      case TRUE:
        jj_consume_token(TRUE);
                    {if (true) return new ValorBooleano(true);}
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PValorBooleano");
    }
  }

  static final public Valor PValorString() throws ParseException {
    trace_call("PValorString");
    try {
        Token token;
      token = jj_consume_token(STRING_LITERAL);
                String tokenStr = token.toString();
                tokenStr = tokenStr.substring(1,tokenStr.length()-1);
                {if (true) return new ValorString(tokenStr);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PValorString");
    }
  }

  static final public Valor PValor() throws ParseException {
    trace_call("PValor");
    try {
        Valor retorno;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
        retorno = PValorInteiro();
        break;
      case TRUE:
      case FALSE:
        retorno = PValorBooleano();
        break;
      case STRING_LITERAL:
        retorno = PValorString();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PValor");
    }
  }

  static final public Expressao PExpMenos() throws ParseException {
    trace_call("PExpMenos");
    try {
        Expressao retorno;
      jj_consume_token(MINUS);
      retorno = PExpressao();
                {if (true) return new ExpMenos(retorno);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpMenos");
    }
  }

  static final public Expressao PExpNot() throws ParseException {
    trace_call("PExpNot");
    try {
        Expressao retorno;
      jj_consume_token(NOT);
      retorno = PExpressao();
                {if (true) return new ExpNot(retorno);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpNot");
    }
  }

  static final public Expressao PExpLength() throws ParseException {
    trace_call("PExpLength");
    try {
        Expressao retorno;
      jj_consume_token(LENGTH);
      retorno = PExpressao();
                {if (true) return new ExpLength(retorno);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpLength");
    }
  }

  static final public Expressao PExpPrimaria() throws ParseException {
    trace_call("PExpPrimaria");
    try {
    Expressao retorno;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        retorno = PId();
        break;
      case TRUE:
      case FALSE:
      case INTEGER_LITERAL:
      case STRING_LITERAL:
        retorno = PValor();
        break;
      case LPAREN:
        jj_consume_token(LPAREN);
        retorno = PExpressao();
        jj_consume_token(RPAREN);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpPrimaria");
    }
  }

  static final public Expressao PExpUnaria() throws ParseException {
    trace_call("PExpUnaria");
    try {
        Expressao retorno;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MINUS:
        retorno = PExpMenos();
        break;
      case NOT:
        retorno = PExpNot();
        break;
      case LENGTH:
        retorno = PExpLength();
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpUnaria");
    }
  }

  static final public Expressao PExpBinaria() throws ParseException {
    trace_call("PExpBinaria");
    try {
        Expressao retorno, param2;
      if (jj_2_2(2147483647)) {
        retorno = PExpConcat();
      } else if (jj_2_3(2147483647)) {
        retorno = PExpSub();
      } else if (jj_2_4(2147483647)) {
        retorno = PExpAnd();
      } else if (jj_2_5(2147483647)) {
        retorno = PExpOr();
      } else if (jj_2_6(2147483647)) {
        retorno = PExpEquals();
      } else if (jj_2_7(2147483647)) {
        retorno = PExpSoma();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpBinaria");
    }
  }

  static final public ExpSoma PExpSoma() throws ParseException {
    trace_call("PExpSoma");
    try {
        Expressao esq;
        Expressao dir;
      esq = PExpPrimaria();
      jj_consume_token(PLUS);
      dir = PExpressao();
         {if (true) return new ExpSoma(esq, dir);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpSoma");
    }
  }

  static final public ExpSub PExpSub() throws ParseException {
    trace_call("PExpSub");
    try {
        Expressao esq;
        Expressao dir;
      esq = PExpPrimaria();
      jj_consume_token(MINUS);
      dir = PExpressao();
         {if (true) return new ExpSub(esq, dir);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpSub");
    }
  }

  static final public ExpAnd PExpAnd() throws ParseException {
    trace_call("PExpAnd");
    try {
        Expressao esq;
        Expressao dir;
      esq = PExpPrimaria();
      jj_consume_token(AND);
      dir = PExpressao();
         {if (true) return new ExpAnd(esq, dir);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpAnd");
    }
  }

  static final public ExpOr PExpOr() throws ParseException {
    trace_call("PExpOr");
    try {
        Expressao esq;
        Expressao dir;
      esq = PExpPrimaria();
      jj_consume_token(OR);
      dir = PExpressao();
         {if (true) return new ExpOr(esq, dir);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpOr");
    }
  }

  static final public ExpEquals PExpEquals() throws ParseException {
    trace_call("PExpEquals");
    try {
        Expressao esq;
        Expressao dir;
      esq = PExpPrimaria();
      jj_consume_token(EQ);
      dir = PExpressao();
         {if (true) return new ExpEquals(esq, dir);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpEquals");
    }
  }

  static final public ExpConcat PExpConcat() throws ParseException {
    trace_call("PExpConcat");
    try {
        Expressao esq;
        Expressao dir;
      esq = PExpPrimaria();
      jj_consume_token(CONCAT);
      dir = PExpressao();
         {if (true) return new ExpConcat(esq, dir);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpConcat");
    }
  }
